--- a/ci/params.yml
+++ b/ci/params.yml
@@ -1,4 +1,4 @@
 ---
 # Git repository configuration
-git-repo: manods/spring-boot-hello-world.git
+git-repo: manods/spring-boot-hello-world
 git-branch: main
