--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,31 +1,31 @@
-name: PR - Pull Request Build
+# name: PR - Pull Request Build
 
-on:
-  pull_request:
-    branches: [ main ]
-    types: [opened, synchronize, reopened]
+# on:
+#   pull_request:
+#     branches: [ main ]
+#     types: [opened, synchronize, reopened]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
     
-    steps:
-    - name: Checkout PR code
-      uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
+#     steps:
+#     - name: Checkout PR code
+#       uses: actions/checkout@v4
+#       with:
+#         ref: ${{ github.event.pull_request.head.sha }}
         
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+#     - name: Set up JDK 17
+#       uses: actions/setup-java@v4
+#       with:
+#         java-version: '17'
+#         distribution: 'temurin'
           
           
-    - name: Build with Maven
-      id: maven-build
-      run: |
-        echo "Starting Maven build..."
-        mvn clean install -B -DskipTests=false
-        echo "Build completed successfully!"
+#     - name: Build with Maven
+#       id: maven-build
+#       run: |
+#         echo "Starting Maven build..."
+#         mvn clean install -B -DskipTests=false
+#         echo "Build completed successfully!"
         
